@@ -11,6 +11,9 @@
  *
  **********************************************************************
  * $Log$
+ * Revision 1.19.2.1  2005/06/25 11:50:55  strk
+ * Back-ported rtree indexing fix
+ *
  * Revision 1.19  2004/08/19 06:15:58  strk
  * USE_VERSION gets 80 where it got 75
  *
@@ -251,36 +254,40 @@ rtree_internal_consistent(BOX *key,
 			BOX *query,
 			StrategyNumber strategy)
 {
-    bool retval;
+	bool retval;
 
 #ifdef DEBUG_GIST
 	elog(NOTICE,"GIST: rtree_internal_consist called\n");
 	fflush( stdout );
 #endif
 
-    switch(strategy) {
-    case RTLeftStrategyNumber:
-    case RTOverLeftStrategyNumber:
-      retval = DatumGetBool( DirectFunctionCall2( box_overleft, PointerGetDatum(key), PointerGetDatum(query) ) );
-      break;
-    case RTOverlapStrategyNumber:
-      retval = DatumGetBool( DirectFunctionCall2( box_overlap, PointerGetDatum(key), PointerGetDatum(query) ) );
-      break;
-    case RTOverRightStrategyNumber:
-    case RTRightStrategyNumber:
-      retval = DatumGetBool( DirectFunctionCall2( box_overright, PointerGetDatum(key), PointerGetDatum(query) ) );
-      break;
-    case RTSameStrategyNumber:
-    case RTContainsStrategyNumber:
-      retval = DatumGetBool( DirectFunctionCall2( box_contain, PointerGetDatum(key), PointerGetDatum(query) ) );
-      break;
-    case RTContainedByStrategyNumber:
-      retval = DatumGetBool( DirectFunctionCall2( box_overlap, PointerGetDatum(key), PointerGetDatum(query) ) );
-      break;
-    default:
-      retval = FALSE;
-    }
-    return(retval);
+	switch(strategy) {
+		case RTLeftStrategyNumber:
+			retval = !DatumGetBool( DirectFunctionCall2( box_overright, PointerGetDatum(key), PointerGetDatum(query) ) );
+			break;
+		case RTOverLeftStrategyNumber:
+			retval = !DatumGetBool( DirectFunctionCall2( box_right, PointerGetDatum(key), PointerGetDatum(query) ) );
+			break;
+		case RTOverlapStrategyNumber:
+			retval = DatumGetBool( DirectFunctionCall2( box_overlap, PointerGetDatum(key), PointerGetDatum(query) ) );
+			break;
+		case RTOverRightStrategyNumber:
+			retval = !DatumGetBool( DirectFunctionCall2( box_left, PointerGetDatum(key), PointerGetDatum(query) ) );
+			break;
+		case RTRightStrategyNumber:
+			retval = !DatumGetBool( DirectFunctionCall2( box_overleft, PointerGetDatum(key), PointerGetDatum(query) ) );
+			break;
+		case RTSameStrategyNumber:
+		case RTContainsStrategyNumber:
+			retval = DatumGetBool( DirectFunctionCall2( box_contain, PointerGetDatum(key), PointerGetDatum(query) ) );
+			break;
+		case RTContainedByStrategyNumber:
+			retval = DatumGetBool( DirectFunctionCall2( box_overlap, PointerGetDatum(key), PointerGetDatum(query) ) );
+			break;
+			default:
+			retval = FALSE;
+	}
+	return(retval);
 }
 
 
