@@ -2,6 +2,7 @@ PostGIS 0.9.2cvs
 ????
   - Leak plugged in dumper
   - fault-tolerant btree ops
+  - BUGFIX in rtree index
 
 PostGIS 0.9.1
 2004/12/12
